# hello-f767zi

./: Cargo.toml  memory.x  openocd.cfg
examples/: hello.rs
src/: main.rs
