[package]
authors = ["Tuwuh Sarwoprasojo <tuwuhs@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "hello-f767zi"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# [dependencies.stm32f7]
# version = "0.11.0"
# features = ["stm32f7x7", "rt"]

[dependencies.stm32f7xx-hal]
# version = "0.1.0"
features = ["stm32f767", "rt"]
git = "https://github.com/stm32-rs/stm32f7xx-hal.git"

# this lets you use `cargo fix`!
[[bin]]
name = "hello-f767zi"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
